--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins:wght@100;200;300&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -8,8 +8,9 @@ html {
 }
 
 body {
-    font-family: 'Playfair Display', serif;
-    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 200;
 }
+
 
 @tailwind utilities;
